fixed home intro text clipping on mobile

--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -6,10 +6,12 @@
   position: relative;
   @include styles.flexCenter(center, column);
   width: 100vw;
+  height: auto;
   .home-body {
     position: relative;
     max-width: 1092px;
     width: 80%;
+    height: auto;
     @include styles.flexCenter(flex-start, column);
     @media (max-width: styles.$screen-lg-max) {
       width: 85%;
@@ -21,6 +23,7 @@
     .container {
       position: relative;
       width: 100%;
+      height: auto;
       margin: calc(2vh + 12px) 0px 0px 0px;
       @media (max-width: styles.$screen-sm-max) {
         display: flex;
@@ -83,9 +86,9 @@
           margin: 0px 0px 0px 0px;
         }
         @media (max-width: styles.$screen-sm-max) {
-          height: 900px;
+          height: auto;
           width: 90%;
-          margin: -50px 0px 0px 0px;
+          margin: 20px 0px 0px 0px;
         }
         .h1-large {
           position: absolute;
@@ -119,6 +122,11 @@
           width: 100%;
           height: 650px;
           overflow: hidden;
+          @media (max-width: styles.$screen-sm-max) {
+            height: auto;
+            padding: 30px 0px 0px 0px;
+            margin: 0vw 0px 100px 0px;
+          }
           .welcome-text {
             position: relative;
             @include styles.flexCenter(flex-start, column);
